--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "framer-motion": "^11.0.0",
+    "howler": "^2.2.4",
     "next": "^15.0.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "framer-motion": "^11.0.0",
-    "howler": "^2.2.4"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
@@ -40,6 +40,7 @@
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.9.3"
   }
 }
